--- a/app/app.css
+++ b/app/app.css
@@ -1,1 +1,23 @@
 @import '~css-reset/reset.css';
+
+a {
+	text-decoration: none;
+	color: #818181;
+}
+
+a:active,
+a:hover {
+	color: #bbb;
+}
+
+p {
+	margin-bottom: 10px;
+}
+
+.-clearfix:after {
+   content: ' ';
+   visibility: hidden;
+   display: block;
+   height: 0;
+   clear: both;
+}
