--- a/app/components/layout/index/style.css
+++ b/app/components/layout/index/style.css
@@ -1,4 +1,17 @@
-.index h2 {
-	font-size: 20px;
-	color: red;
+.index .user-item {
+	text-align: center;
+	display: inline-block;
+	margin-right: 20px;
+	margin-bottom: 20px;
+}
+
+.index .user-item-image {
+	width: 100px;
+	height: 100px;
+	margin-bottom: 5px;
+}
+
+.index .user-item-image img {
+	width: 100%;
+	height: 100%;
 }
